# Informatika-3

./: .gitignore  CMakeLists.txt
cvicenia/01/: CMakeLists.txt
cvicenia/02/: CMakeLists.txt  display_row.hpp
cvicenia/02/src/: CMakeLists.txt  display.cpp  display.hpp  display_row.cpp  display_row.hpp  filters.cpp  filters.hpp  game_of_life.cpp  game_of_life.hpp  main.cpp  terminal.cpp  ui_utils.cpp  ui_utils.hpp
cvicenia/03-turtlepreter/resources/: config.json
cvicenia/03-turtlepreter/turtlepreter/: CMakeLists.txt  config.hpp  controllable.cpp  controllable.hpp  interpreter.cpp  interpreter.hpp  main.cpp  perk.cpp  perk.hpp  turtle.cpp  turtle.hpp  turtle_gui.cpp  turtle_gui.hpp
cvicenia/04-data/: .clangd  CMakeLists.txt
cvicenia/04-data/libdf/: CMakeLists.txt  csv_config.cpp  csv_loader.hpp  data_frame.cpp  data_frame.hpp  json_loader.hpp  loader.hpp
cvicenia/04-data/pokemon/: CMakeLists.txt  main.cpp  pokemon.cpp  pokemon.hpp
cvicenia/04-data/weather/: CMakeLists.txt  main.cpp  weather_data.cpp  weather_data.hpp
cvicenia/05-c/: .clangd  CMakeLists.txt
cvicenia/05-c/data/: pokedex.txt
cvicenia/05-c/src/: CMakeLists.txt  main.c  pokedex.c  pokedex.h  pokemon.c  pokemon.h
cvičenia/01/: kvadraticka.cpp
cvičenia/02/: display_row.hpp
zadania/01/: CMakeLists.txt  README.md
zadania/01/src/: CMakeLists.txt  display.cpp  (+10 more)
zadania/02/: .gitignore  README.md
zadania/03/: CMakeLists.txt  README.md
zadania/03/libsrt/: CMakeLists.txt  srt_loader.cpp  srt_loader.hpp  srt_processor.hpp  srt_writer.cpp  srt_writer.hpp  subtitles.hpp  utils.cpp  utils.hpp
(+13 files in other folders)
